<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/reminderEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:hint="@string/set_content_name"
        android:textSize="20sp" />

    <Button
        android:id="@+id/setDateButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/reminderEditText"
        android:layout_alignStart="@+id/reminderEditText"
        android:layout_below="@+id/reminderEditText"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorTwo"
        android:text="@string/set_date_button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/setTimeButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/setDateButton"
        android:layout_alignStart="@+id/setDateButton"
        android:layout_below="@+id/setDateButton"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/colorTwo"
        android:text="@string/set_time_button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/saveButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cancelButton"
        android:layout_alignStart="@+id/setTimeButton"
        android:layout_alignTop="@+id/cancelButton"
        android:backgroundTint="@color/colorThree"
        android:text="@string/save_button"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/setTimeButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="21dp"
        android:backgroundTint="@color/colorThree"
        android:text="@string/cancel_button"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>